--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,8 @@ lxml==4.6.3
 MarkupSafe==2.0.1
 mccabe==0.6.1
 mf2py==1.1.2
-numpy==1.19.5
+numpy
 pandas==1.1.5
-pathlib==1.0.1
 psutil==5.8.0
 pycodestyle==2.7.0
 PyLD==2.0.3
@@ -40,6 +39,7 @@ pytz==2021.1
 rdflib==5.0.0
 rdflib-jsonld==0.5.0
 requests==2.26.0
+setuptools
 six==1.16.0
 soupsieve==2.2.1
 toml==0.10.2
