--- a/requirements.txt
+++ b/requirements.txt
@@ -1,131 +1,15 @@
-altair==4.2.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-astor==0.8.1
-astroid==2.6.5
-asttokens==2.0.5
-attrs==21.2.0
-autopep8==1.5.7
-backcall==0.2.0
-base58==2.1.1
-beautifulsoup4==4.9.3
-black==22.1.0
-bleach==4.1.0
-blinker==1.4
-cachetools==4.2.2
-certifi==2021.5.30
-cffi==1.15.0
-charset-normalizer==2.0.3
+beautifulsoup4==4.10.0
 click==8.0.1
-coverage==6.3.1
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-executing==0.8.2
 extruct==0.12.0
 Flask==2.0.2
-frozendict==2.0.3
-gitdb==4.0.9
-GitPython==3.1.26
-gunicorn==20.1.0
-html-text==0.5.2
-html5lib==1.1
-idna==3.2
-importlib-metadata==4.6.1
-iniconfig==1.1.1
-ipykernel==6.8.0
-ipython==8.0.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-isodate==0.6.0
-isort==5.9.2
-itsdangerous==2.0.1
-jedi==0.18.1
-Jinja2==3.0.2
 jsonschema==3.2.0
-jstyleson==0.0.2
-jupyter-client==7.1.2
-jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-lazy-object-proxy==1.6.0
-lxml==4.6.3
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-mf2py==1.1.2
-mistune==0.8.4
-mpi4py==3.1.3
-mypy-extensions==0.4.3
-nbclient==0.5.10
-nbconvert==6.4.1
-nbformat==5.1.3
-nest-asyncio==1.5.4
-notebook==6.4.8
-numpy==1.22.2
-packaging==21.3
 pandas==1.1.5
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.9.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.0.1
-platformdirs==2.4.1
-pluggy==1.0.0
-prometheus-client==0.13.1
-prompt-toolkit==3.0.26
-protobuf==3.19.4
-psutil==5.8.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py==1.11.0
-pyarrow==7.0.0
-pycodestyle==2.7.0
-pycparser==2.21
-pydeck==0.7.1
-Pygments==2.11.2
 PyLD==2.0.3
-pylint==2.9.5
-Pympler==1.0.1
-pyparsing==2.4.7
-pyRdfa3==3.5.3
-pyrsistent==0.18.0
-pytest==6.2.5
-python-dateutil==2.8.2
-pytz==2021.1
-pytz-deprecation-shim==0.1.0.post0
-pyzmq==22.3.0
+python_dateutil==2.8.2
 rdflib==5.0.0
-rdflib-jsonld==0.5.0
 requests==2.26.0
-Send2Trash==1.8.0
-six==1.16.0
-smmap==5.0.0
-soupsieve==2.2.1
-stack-data==0.1.4
 streamlit==1.5.0
-terminado==0.13.1
-testpath==0.5.0
 toml==0.10.2
-tomli==2.0.0
-toolz==0.11.2
-tornado==6.1
 tqdm==4.60.0
-traitlets==5.1.1
-typed-ast==1.4.3
-typing-extensions==3.10.0.0
-tzdata==2021.5
-tzlocal==4.1
-ultimate-sitemap-parser==0.5
-urllib3==1.26.6
-validators==0.18.2
+ultimate_sitemap_parser==0.5
 w3lib==1.22.0
-watchdog==2.1.6
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.2
-widgetsnbextension==3.5.2
-wrapt==1.12.1
-zipp==3.5.0
